Fix: Fixed the navigation well adding hidden apps to swipes
Signed-off-by: HeCodes2Much <wayne6324@gmail.com>

--- a/app/src/main/res/layout/fragment_hidden.xml
+++ b/app/src/main/res/layout/fragment_hidden.xml
@@ -8,12 +8,6 @@
     tools:context=".ui.hidden.HiddenFragment">
 
     <FrameLayout
-        android:id="@+id/touchArea"
-        android:layout_marginVertical="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:clickable="true"
@@ -32,11 +26,12 @@
             android:textSize="@dimen/text_super_large"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/TextDefaultStyle" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/hiddenAdapter"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="92dp"
