--- a/app/src/main/res/values/nontranslatable.xml
+++ b/app/src/main/res/values/nontranslatable.xml
@@ -24,4 +24,14 @@
     <string name="widget_weather_pressure" translatable="false">Pressure : %d hPa</string>
 
     <string name="acra_email" translatable="false">droidworksstudio@063240.xyz</string>
+
+    <string name="settings_font_roboto" translatable="false">Roboto</string>
+    <string name="settings_font_opensans" translatable="false">Open Sans</string>
+    <string name="settings_font_lato" translatable="false">Lato</string>
+    <string name="settings_font_montserrat" translatable="false">Montserrat</string>
+    <string name="settings_font_merriweather" translatable="false">Merriweather</string>
+    <string name="settings_font_droidsans" translatable="false">Droid Sans</string>
+    <string name="settings_font_raleway" translatable="false">Raleway</string>
+    <string name="settings_font_sourcecodepro" translatable="false">SourceCodePro</string>
+    <string name="settings_font_quicksand" translatable="false">Quicksand</string>
 </resources>
