--- a/app/src/main/res/layout/bottomsheetdialog_text_settings.xml
+++ b/app/src/main/res/layout/bottomsheetdialog_text_settings.xml
@@ -23,7 +23,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            style="@style/TextDefaultStyle"/>
+            style="@style/TextDefaultStyle" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
@@ -38,7 +38,7 @@
                 android:layout_marginVertical="20dp"
                 android:background="@android:color/transparent"
                 android:gravity="left|center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:text="@string/appearance_bottom_dialog_desc_date"
                 android:textSize="@dimen/text_large"
                 app:layout_constraintStart_toStartOf="parent"
@@ -53,14 +53,13 @@
                 android:layout_marginVertical="20dp"
                 android:background="@android:color/transparent"
                 android:gravity="left|center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:textSize="@dimen/text_large"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="RtlHardcoded,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
-
 
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -76,7 +75,7 @@
                 android:layout_marginVertical="20dp"
                 android:background="@android:color/transparent"
                 android:gravity="left|center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:text="@string/appearance_bottom_dialog_desc_time"
                 android:textSize="@dimen/text_large"
                 app:layout_constraintStart_toStartOf="parent"
@@ -91,7 +90,7 @@
                 android:layout_marginVertical="20dp"
                 android:background="@android:color/transparent"
                 android:gravity="left|center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:textSize="@dimen/text_large"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -112,7 +111,7 @@
                 android:layout_marginVertical="20dp"
                 android:background="@android:color/transparent"
                 android:gravity="left|center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:text="@string/appearance_bottom_dialog_desc_app"
                 android:textSize="@dimen/text_large"
                 app:layout_constraintStart_toStartOf="parent"
@@ -127,7 +126,7 @@
                 android:layout_marginVertical="20dp"
                 android:background="@android:color/transparent"
                 android:gravity="left|center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:textSize="@dimen/text_large"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -148,7 +147,7 @@
                 android:layout_marginVertical="20dp"
                 android:background="@android:color/transparent"
                 android:gravity="left|center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:text="@string/appearance_bottom_dialog_desc_battery"
                 android:textSize="@dimen/text_large"
                 app:layout_constraintStart_toStartOf="parent"
@@ -163,7 +162,7 @@
                 android:layout_marginVertical="20dp"
                 android:background="@android:color/transparent"
                 android:gravity="left|center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:textSize="@dimen/text_large"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
