--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -36,6 +36,16 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="92dp"
             app:layout_constraintTop_toBottomOf="@id/topTextView" />
+
+        <TextView
+            android:id="@+id/noApps"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="92dp"
+            android:text="@string/favorite_fragment_no_apps"
+            android:textSize="18sp"
+            android:visibility="gone" />
     </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
